# InputBot

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
examples/: autoclicker.rs  autorun.rs  bind_all.rs  blockable_binds.rs  inputlogger.rs  key_sequences.rs  linuxtest.rs  move_mouse.rs  rapidfire.rs  serde.rs  test.rs
src/: common.rs  lib.rs  public.rs
src/linux/: codes.rs  inputs.rs  mod.rs
src/mac/: inputs.rs  mod.rs
src/windows/: codes.rs  inputs.rs  mod.rs  vk.rs
