[package]
name = "inputbot"
version = "0.6.0"
authors = ["obv-mikhail <obv.mikhail@gmail.com>"]
description = "Cross-platform (Windows & Linux) library for simulating keyboard/mouse input events and registering global input device event handlers."
documentation = "https://docs.rs/inputbot"
homepage = "https://github.com/obv-mikhail/inputbot"
repository = "https://github.com/obv-mikhail/inputbot"
readme = "README.md"
keywords = ["hotkey", "mouse", "keyboard", "input", "bot"]
categories = ["accessibility", "api-bindings", "os"]
license = "MIT"
edition = "2021"

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
once_cell = "1.18.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.148"
input = "0.8.3"
nix = { version = "0.27.1", features = ["fs"] }
x11 = { version = "2.21.0", features = ["xlib", "xtest"] }
uinput = { version = "0.1.3", default-features = false }
